# ipm.ipm

./: .gitignore  .gitmodules  Cargo.toml  rustfmt.toml
project/convert/: templates.rs
project/convert/templates/deb/scripts/: install.sh
repo/ipm/: repo.yaml
src/: lib.rs  main.rs  modules.rs  utils.rs
src/modules/: messages.rs  pkg.rs  project.rs  repo.rs  utils.rs
src/modules/pkg/: convert.rs
src/modules/project/: convert.rs
src/modules/project/convert/: templates.rs
src/modules/project/convert/templates/: README.md
src/modules/project/convert/templates/deb/scripts/: purge.sh  remove.sh
src/modules/repo/: apt.rs  install.rs  list.rs  pkg.rs  purge.rs  remove.rs  server.rs  types.rs  update.rs
src/modules/repo/server/: build.rs  init.rs  metadata.rs  project.rs
src/modules/repo/types/: apt.rs  ipm.rs
src/modules/system/path/: global.rs  local.rs
src/utils/: args.rs  error.rs  www.rs
test-dir/ipm/: repo.yaml
tmp/: control.tar.zst  data.tar.zst  hello-2.10-3build2.ipak  hello_2.10-3build2_amd64.deb
tmp/control/: control  md5sums
