[package]
name = "ipm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ipak = { git = "https://github.com/The-Infinitys/ipm.ipak.git" }
cmd_arg = { git = "https://github.com/The-Infinitys/rust.cmd-arg.git" }
colored = "3.0.0"
deb822-lossless = "0.2.6"
flate2 = "1.1.1"
reqwest = "0.12.16"
tokio = { version = "1.45.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
