[package]
name = "ipm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
ipak = { git = "https://github.com/The-Infinitys/ipm.ipak.git" }
cmd_arg = { git = "https://github.com/The-Infinitys/rust.cmd-arg.git" }
chrono = { version = "0.4.41", features = ["serde"] }
serde = "1.0.219"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
flate2 = "1.1.2"
anyhow = "1.0.98"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
async-std = "1.13.1"
tempfile = "3.20.0"
